# sgr-agent-core-Gigachat-cut-deps

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  Untitled.ipynb  agents.yaml.example  config.yaml.example  demo_agent_Gigachat.ipynb  logging_config.yaml  pyproject.toml  ruff.toml  test_agent_config.yaml
benchmark/: benchmark_agent.py  env.example  prompts.py  requirements.txt  run_simpleqa_bench.py  simpleqa_benchmark_results.md  utils.py
docs/: example_report.md
docs/examples/: simple_shine_cli.py
examples/: basic_research_request.py  research_with_clarification.py
services/: docker-compose.yml
services/api_service/: Dockerfile  requirements.txt
sgr-deep-research-frontend/: Dockerfile  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
sgr-deep-research-frontend/nginx/: default.conf
sgr-deep-research-frontend/src/app/: main.ts
sgr-deep-research-frontend/src/pages/: WorkspacePage.vue
sgr-deep-research-frontend/src/shared/: index.ts
sgr_deep_research/: __init__.py  __main__.py  default_definitions.py  settings.py
sgr_deep_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sgr_deep_research/api/: __init__.py  endpoints.py  models.py
sgr_deep_research/core/: __init__.py  agent_config.py  agent_definition.py  agent_factory.py  base_agent.py  base_tool.py  models.py  next_step_tool.py  stream.py
sgr_deep_research/core/agents/: __init__.py  sgr_agent.py  sgr_auto_tool_calling_agent.py  sgr_so_tool_calling_agent.py  sgr_tool_calling_agent.py  tool_calling_agent.py
sgr_deep_research/core/prompts/: __init__.py  clarification_response.txt  initial_user_request.txt  system_prompt.txt
sgr_deep_research/core/services/: __init__.py  prompt_loader.py  registry.py  tavily_search.py
sgr_deep_research/core/tools/: __init__.py  adapt_plan_tool.py  clarification_tool.py  create_report_tool.py  extract_page_content_tool.py  final_answer_tool.py  generate_plan_tool.py  reasoning_tool.py  web_search_tool.py
sgr_deep_research/gigachat_compatability/: __init__.py  base_agent.py  base_tool.py  models.py
sgr_deep_research/gigachat_compatability/agents/: __init__.py  tool_calling_agent.py
sgr_deep_research/gigachat_compatability/tools/: __init__.py  adapt_plan_tool.py  clarification_tool.py  create_report_tool.py  extract_page_content_tool.py  final_answer_tool.py  (+3 more)
tests/: __init__.py  conftest.py  test_agent_config_integration.py  test_agent_factory.py  test_api_endpoints.py  test_api_models.py  test_base_agent.py  test_base_tool.py  test_models.py  test_prompts.py  test_streaming.py  test_tools.py
(+92 files in other folders)
